--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.jasperreports-javaflow-6.3.0.jar=..\\..\\..\\Desktop\\jar_reporte
 file.reference.jcalendar-1.4.jar=D:\\IE-download\\javaRecursos\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=..\\..\\..\\Desktop\\jar_reportear\\jcalendar-1.4.jar
 file.reference.nimrodlf-1.2d.jar=..\\..\\..\\Desktop\\jar_reportear\\nimrodlf-1.2d.jar
+file.reference.PlaceHolder.jar=C:\\Users\\Master-Pc\\Downloads\\PlaceHolder\\PlaceHolder.jar
 file.reference.postgresql-9.4.1209.jar=C:\\Users\\Master-Pc\\Desktop\\bina0210\\dist\\lib\\postgresql-9.4.1209.jar
 includes=**
 jar.compress=false
@@ -59,7 +60,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.nimrodlf-1.2d.jar}:\
     ${libs.MyLibrary.classpath}:\
-    ${libs.MyLibrary1.classpath}
+    ${libs.MyLibrary1.classpath}:\
+    ${file.reference.PlaceHolder.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
