--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,7 +58,8 @@ javac.classpath=\
     ${file.reference.jasperreports-javaflow-6.3.0.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.nimrodlf-1.2d.jar}:\
-    ${libs.MyLibrary.classpath}
+    ${libs.MyLibrary.classpath}:\
+    ${libs.MyLibrary1.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
