--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,15 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar=C:\\Users\\Master-Pc\\Desktop\\PVSys2.0\\dist\\lib\\jcalendar-1.4.jar
-file.reference.postgresql-9.4.1209.jar=C:\\Users\\Master-Pc\\Desktop\\PVSys2.0\\dist\\lib\\postgresql-9.4.1209.jar
+file.reference.commons-beanutils-1.9.2.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\commons-beanutils-1.9.2.jar
+file.reference.commons-collections-3.2.2.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\commons-collections-3.2.2.jar
+file.reference.commons-digester-1.8.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\commons-digester-1.8.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\commons-logging-1.2.jar
+file.reference.iText-2.1.7.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\iText-2.1.7.jar
+file.reference.jasperreports-6.3.0.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\jasperreports-6.3.0.jar
+file.reference.jasperreports-fonts-6.3.0.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\jasperreports-fonts-6.3.0.jar
+file.reference.jasperreports-functions-6.3.0.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\jasperreports-functions-6.3.0.jar
+file.reference.jasperreports-javaflow-6.3.0.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\jasperreports-javaflow-6.3.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\jcalendar-1.4.jar
+file.reference.nimrodlf-1.2d.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\nimrodlf-1.2d.jar
+file.reference.postgresql-9.4.1209.jar=C:\\Users\\Docente\\Desktop\\Binarios\\binarios\\dist\\lib\\postgresql-9.4.1209.jar
 user.properties.file=C:\\Users\\Master-Pc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
